--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gojra Crown Plaza</title>
+  <title>Mall of Gojra | Flagship Commercial Plaza in Gojra</title>
+  <meta name="description"
+    content="Mall of Gojra is the city’s first metro-grade commercial plaza with 24,710 sq ft of ready-to-operate flagship retail space on Main Pensara Road." />
+  <meta name="keywords"
+    content="Mall of Gojra, Gojra commercial property, retail shops Gojra, Pensara Road plaza, flagship retail Pakistan" />
+  <meta name="author" content="Mall of Gojra" />
+  <meta name="application-name" content="Mall of Gojra" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#050505" />
+  <meta name="color-scheme" content="dark light" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_PK" />
+  <meta property="og:site_name" content="Mall of Gojra" />
+  <meta property="og:title" content="Mall of Gojra | Flagship Commercial Plaza in Gojra" />
+  <meta property="og:description"
+    content="Secure a premium retail or corporate outlet in Gojra’s most visible commercial landmark featuring dual access, branded frontage, and modern infrastructure." />
+  <meta property="og:url" content="https://mallofgojra.com/" />
+  <meta property="og:image" content="https://mallofgojra.com/Website-Logo.png" />
+  <meta property="og:image:alt" content="Mall of Gojra brand mark" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Mall of Gojra | Flagship Commercial Plaza in Gojra" />
+  <meta name="twitter:description"
+    content="Move into a metro-grade commercial address with 24,710 sq ft of customizable space, floor plates, and corporate amenities." />
+  <meta name="twitter:image" content="https://mallofgojra.com/Website-Logo.png" />
+  <link rel="canonical" href="https://mallofgojra.com/" />
+  <link rel="icon" type="image/png" href="/Website-Logo.png" />
+  <link rel="apple-touch-icon" href="/Website-Logo.png" />
 </head>
 
 
@@ -15,4 +40,3 @@
 </body>
 
 </html>
-
