--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en-PK">
 
 <head>
   <meta charset="UTF-8" />
@@ -11,9 +11,13 @@
     content="Mall of Gojra, Gojra commercial property, retail shops Gojra, Pensara Road plaza, flagship retail Pakistan" />
   <meta name="author" content="Mall of Gojra" />
   <meta name="application-name" content="Mall of Gojra" />
-  <meta name="robots" content="index, follow" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
   <meta name="theme-color" content="#050505" />
   <meta name="color-scheme" content="dark light" />
+  <meta name="geo.region" content="PK-PB" />
+  <meta name="geo.placename" content="Gojra, Punjab, Pakistan" />
+  <meta name="geo.position" content="31.156977774382423;72.6837145756678" />
+  <meta name="ICBM" content="31.156977774382423, 72.6837145756678" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_PK" />
   <meta property="og:site_name" content="Mall of Gojra" />
@@ -29,8 +33,10 @@
     content="Move into a metro-grade commercial address with 24,710 sq ft of customizable space, floor plates, and corporate amenities." />
   <meta name="twitter:image" content="https://mallofgojra.com/Website-Logo.png" />
   <link rel="canonical" href="https://mallofgojra.com/" />
-  <link rel="icon" type="image/png" href="/Website-Logo.png" />
-  <link rel="apple-touch-icon" href="/Website-Logo.png" />
+  <link rel="alternate" hrefLang="en-PK" href="https://mallofgojra.com/" />
+  <link rel="alternate" hrefLang="x-default" href="https://mallofgojra.com/" />
+  <link rel="icon" type="image/png" href="/MG_Black.png" />
+  <link rel="apple-touch-icon" href="/MG_Black.png" />
 </head>
 
 
